--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -106,9 +106,11 @@ a.link {
 
 <h4>Apps and Stuff</h4>
 
-<p><a class="link" href="http://anagram.ronkow.com">Anagrams</a></p>
+<p><a class="link" href="http://anagram.ronkow.com">Anagrams - a word game</a></p>
 
-<p><a class="link" href="beans/">Beans</a></p>
+<p><a class="link" href="http://detector.ronkow.com">Detector - detect objects in your photo</a></p>
+    
+<p><a class="link" href="beans/">The Goodness of Beans</a></p>
 
 <div style="margin-bottom:40px"></div>
 
